--- a/doc/README.ps
+++ b/doc/README.ps
@@ -1,7 +1,7 @@
 %!PS-Adobe-2.0
 %%Creator: dvipsk 5.58f Copyright 1986, 1994 Radical Eye Software
 %%Title: README.dvi
-%%Pages: 4
+%%Pages: 6
 %%PageOrder: Ascend
 %%BoundingBox: 0 0 596 842
 %%DocumentFonts: Palatino-Roman Courier Palatino-Bold Palatino-Italic
@@ -10,7 +10,7 @@
 %DVIPSCommandLine: dvips -o /home/karsten/src/Projects/M/doc/README.ps
 %+ README.dvi
 %DVIPSParameters: dpi=300, compressed, comments removed
-%DVIPSSource:  TeX output 1998.05.14:1948
+%DVIPSSource:  TeX output 1998.05.30:1753
 %%BeginProcSet: texc.pro
 /TeXDict 250 dict def TeXDict begin /N{def}def /B{bind def}N /S{exch}N
 /X{S N}B /TR{translate}N /isls false N /vsize 11 72 mul N /hsize 8.5 72
@@ -211,35 +211,37 @@ TeXDict begin 39158280 55380996 1000 300 300 (README.dvi)
 30 1[30 30 30 30 30 30 30 30 30 30 30 30 30 30 30 30
 1[30 1[30 1[30 30 30 30 3[30 30 30 1[30 30 30 30 30 2[30
 30 30 30 30 30 30 30 30 3[30 2[30 1[30 2[30 2[30 30 30
-30 30 30 1[30 43[{ TeXBase1Encoding ReEncodeFont }58
+30 30 30 1[30 30 30 30 40[{ TeXBase1Encoding ReEncodeFont }61
 50.000001 /Courier rf /Fc 134[33 1[50 1[37 20 27 23 1[37
-33 37 53 20 2[20 37 33 1[30 37 27 37 30 9[60 4[43 2[50
-11[43 14[30 30 30 30 1[18 15 43[37 2[{ TeXBase1Encoding ReEncodeFont }
-30 59.999974 /Palatino-Bold rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2
-B512C0A86C1380A26C13006C5A6C5AEA03F012147D9519>15 D E
-/Fe 134[28 26 42 28 30 16 21 20 28 30 27 29 44 14 28
-12 14 29 28 17 24 30 22 28 25 7[33 33 50 36 39 31 26
-33 1[30 39 1[47 30 2[17 2[28 30 1[35 30 39 2[30 1[30
-1[12 5[25 25 25 25 25 30 12 17 12 30 3[14 36[30 2[{
- TeXBase1Encoding ReEncodeFont }58 50.000001 /Palatino-Roman
-rf /Ff 134[28 25 41 1[30 17 22 19 1[30 28 30 44 17 2[17
-30 28 19 25 30 22 30 25 8[33 50 2[33 30 1[41 30 41 1[50
-30 2[19 2[28 2[36 1[39 10[25 25 25 25 25 25 1[15 12 17
-42[30 2[{ TeXBase1Encoding ReEncodeFont }44 50.000001
-/Palatino-Bold rf /Fg 138[44 24 32 28 1[44 40 44 64 24
-2[24 44 40 28 36 44 32 1[36 12[48 2[60 7[28 2[40 2[52
-1[56 10[36 36 36 36 36 36 46[44 2[{ TeXBase1Encoding ReEncodeFont }30
-71.999998 /Palatino-Bold rf /Fh 134[25 1[38 26 27 15
-19 18 25 27 25 26 40 13 25 1[13 26 1[15 22 28 20 25 23
-12[28 6[43 3[15 26[11 46[{ TeXBase1Encoding ReEncodeFont }26
-45.624988 /Palatino-Roman rf /Fi 139[15 20 18 14[20 28
-23 31[35 65[{ TeXBase1Encoding ReEncodeFont }7 45.624988
-/Palatino-Bold rf /Fj 138[36 36 36 36 1[36 36 36 36 36
-3[36 36 1[36 36 2[36 30[36 1[36 5[36 10[36 36 1[36 44[{
+33 37 53 20 37 1[20 37 33 23 30 37 27 37 30 9[60 4[43
+2[50 50 1[37 2[23 50 1[33 2[43 13[30 30 30 30 30 1[18
+15 4[20 20 37[37 2[{ TeXBase1Encoding ReEncodeFont }40
+59.999974 /Palatino-Bold rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512
+C0A86C1380A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe
+107[25 25 25[28 26 42 28 30 16 21 20 28 30 27 29 44 14
+28 12 14 29 28 17 24 30 22 28 25 7[33 33 50 36 39 31
+26 33 1[30 39 41 47 30 2[17 41 1[28 30 39 35 30 39 2[30
+1[30 1[12 3[25 25 25 25 25 25 25 30 12 17 12 30 1[17
+17 14 36[30 2[{ TeXBase1Encoding ReEncodeFont }67 50.000001
+/Palatino-Roman rf /Ff 134[28 25 41 1[30 17 22 19 1[30
+28 30 44 17 2[17 30 28 19 25 30 22 30 25 8[33 50 2[33
+30 1[41 30 41 1[50 30 2[19 2[28 2[36 1[39 9[25 25 25
+25 25 25 25 1[15 12 17 42[30 2[{ TeXBase1Encoding ReEncodeFont }45
+50.000001 /Palatino-Bold rf /Fg 134[40 3[44 24 32 28
+1[44 40 44 64 24 2[24 44 40 28 36 44 32 1[36 12[48 44
+1[60 44 6[28 2[40 2[52 1[56 9[36 36 36 36 36 36 36 46[44
+2[{ TeXBase1Encoding ReEncodeFont }34 71.999998 /Palatino-Bold
+rf /Fh 134[25 1[38 26 27 15 19 18 25 27 25 26 40 13 25
+1[13 26 1[15 22 28 20 25 23 12[28 6[43 3[15 26[11 46[{
+ TeXBase1Encoding ReEncodeFont }26 45.624988 /Palatino-Roman
+rf /Fi 139[15 20 18 14[20 28 23 31[35 65[{
+ TeXBase1Encoding ReEncodeFont }7 45.624988 /Palatino-Bold
+rf /Fj 138[36 36 36 36 1[36 36 36 36 36 3[36 36 1[36
+36 2[36 30[36 1[36 5[36 10[36 36 1[36 44[{
  TeXBase1Encoding ReEncodeFont }20 59.999974 /Courier
 rf /Fk 3[36 130[33 4[19 25 24 3[35 1[17 3[35 2[29 37
-2[30 19[57 1[43 8[37 8[30 30 3[30 2[30 7[20 20 40[{
- TeXBase1Encoding ReEncodeFont }20 59.999974 /Palatino-Roman
+2[30 19[57 1[43 8[37 8[30 30 4[30 1[30 30 6[20 20 40[{
+ TeXBase1Encoding ReEncodeFont }21 59.999974 /Palatino-Roman
 rf /Fl 139[28 37 3[47 2[25 6[41 3[43 14[58 3[72 32[29
 45[{ TeXBase1Encoding ReEncodeFont }9 86.416689 /Palatino-Roman
 rf /Fm 178[81 77[{ .167 SlantFont TeXBase1Encoding ReEncodeFont }1
@@ -257,7 +259,7 @@ a4
 %%Page: 1 1
 1 0 bop 568 407 a Fm(M)31 b Fl(-)22 b(Release)f(Notes)725
 556 y Fk(Karsten)15 b(Ball\374der)85 631 y(\()p Fj(Ballueder@usa.net,)
-33 b(http://Ballueder.home.ml.org)o Fk(\))723 751 y(14th)15
+33 b(http://Ballueder.home.ml.org)o Fk(\))723 751 y(30th)15
 b(May)g(1998)828 936 y Fi(Abstract)250 1023 y Fh(This)d(document)g(is)g
 (a)f(set)h(of)f(notes)h(about)f(how)h(to)f(compile)h(and)g(install)g
 (M.)g(It)182 1080 y(also)f(covers)g(some)h(fr)o(equently)h(asked)e
@@ -295,129 +297,207 @@ b(and)i(T)-6 b(esting)1015 b(3)135 2359 y Fe(4.1)52 b(Con\002guration)
 (.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
 f(.)h(.)91 b(3)135 2479 y(4.3)52 b(W)l(riting)13 b(mail/news)36
 b(.)25 b(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)
-h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)60 2589 y
-Ff(5)50 b(Further)13 b(Information)1153 b(4)60 2699 y(6)50
-b(F)m(AQ)1505 b(4)903 2856 y Fe(1)p eop
+h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)903 2856 y(1)p
+eop
 %%Page: 2 2
-2 1 bop 60 205 a Fg(1)72 b(Introduction)60 319 y Fe(M)18
-b(is)g(intended)h(to)f(be)f(a)h(powerful)e(mail)j(and)f(news)f(client.)
-33 b(The)17 b(following)h(points)60 380 y(wer)o(e)11
-b(signi\002cant)j(in)f(the)g(development)g(of)f(it)133
-494 y Fd(\017)24 b Fe(it)13 b(should)h(have)e(an)h(easy)f(to)g(use)h
-(graphical)g(user)f(interface)133 595 y Fd(\017)24 b
+2 1 bop 60 203 a Ff(5)50 b(Scripting)12 b(and)i(Python)e(integration)
+861 b(4)135 264 y Fe(5.1)52 b(Intr)o(oduction)33 b(.)25
+b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
+(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)135
+324 y(5.2)52 b(Initialisation)34 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)
+g(.)h(.)f(.)h(.)91 b(4)135 384 y(5.3)52 b(Callback)13
+b(Functions)h(\(Hooks\))33 b(.)26 b(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)135
+444 y(5.4)52 b(Namespaces)32 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g
+(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)
+h(.)f(.)h(.)91 b(4)135 504 y(5.5)52 b(List)14 b(of)e(Callbacks)21
+b(.)k(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(5)60
+614 y Ff(6)50 b(Further)13 b(Information)1153 b(5)60
+724 y(7)50 b(F)m(AQ)1505 b(5)60 893 y Fg(1)72 b(Introduction)60
+1007 y Fe(M)18 b(is)g(intended)h(to)f(be)f(a)h(powerful)e(mail)j(and)f
+(news)f(client.)33 b(The)17 b(following)h(points)60 1067
+y(wer)o(e)11 b(signi\002cant)j(in)f(the)g(development)g(of)f(it)133
+1149 y Fd(\017)24 b Fe(it)13 b(should)h(have)e(an)h(easy)f(to)g(use)h
+(graphical)g(user)f(interface)133 1242 y Fd(\017)24 b
 Fe(it)13 b(should)g(be)e(powerful,)h(being)g(able)g(to)g(r)o(eplace)g
-(awkwar)o(d)f(tools)i(such)f(as)g(pr)o(oc-)182 656 y(mail,)i(thus)f(it)
-g(must)g(have)f(a)g(built)i(in)f(scripting)g(language)133
-757 y Fd(\017)24 b Fe(it)14 b(should)h(have)f(full)g(support)g(for)f(a)
-h(wide)g(range)f(of)g(standar)o(ds,)j(including)f(full)182
-817 y(MIME)e(support)133 919 y Fd(\017)24 b Fe(it)13
+(awkwar)o(d)f(tools)i(such)f(as)g(pr)o(oc-)182 1302 y(mail,)i(thus)f
+(it)g(must)g(have)f(a)g(built)i(in)f(scripting)g(language)133
+1396 y Fd(\017)24 b Fe(it)14 b(should)h(have)f(full)g(support)g(for)f
+(a)h(wide)g(range)f(of)g(standar)o(ds,)j(including)f(full)182
+1456 y(MIME)e(support)133 1550 y Fd(\017)24 b Fe(it)13
 b(should)h(run)e(on)g(a)h(wide)f(variety)h(of)f(systems)h(</enum>)60
-1092 y Fg(2)72 b(Compilation)16 b(notes)60 1221 y Fc(2.1)59
-b(Operating)14 b(systems)g(speci\002c)60 1316 y Ff(2.1.1)50
-b(Linux)60 1411 y Fe(If)9 b(compiling)i(with)e(a)h(non-default)g
+1718 y Fg(2)72 b(Compilation)16 b(notes)60 1847 y Fc(2.1)59
+b(Operating)14 b(systems)g(speci\002c)60 1942 y Ff(2.1.1)50
+b(Linux)60 2037 y Fe(If)9 b(compiling)i(with)e(a)h(non-default)g
 (compiler)g(like)g(egcs,)g(make)f(sur)o(e)g(that)h Fb(/usr/include)60
-1471 y Fe(is)j(not)g(in)g(the)f(include)i(path,)f(neither)g(should)h
-Fb(/usr/lib)d Fe(be)h(explicitly)i(listed.)60 1607 y
-Ff(2.1.2)50 b(Solaris/SunOS)60 1703 y Fe(M)17 b(has)g(been)f
+2097 y Fe(is)j(not)g(in)g(the)f(include)i(path,)f(neither)g(should)h
+Fb(/usr/lib)d Fe(be)h(explicitly)i(listed.)60 2229 y
+Ff(2.1.2)50 b(Solaris/SunOS)60 2324 y Fe(M)17 b(has)g(been)f
 (successfully)h(compiled)i(with)e Fb(gcc-2.8.0)e Fe(on)i(Solaris.)30
-b(Curr)o(ently)17 b(it)60 1763 y(does)c(not)g(compile)g(with)g(the)g
-(standar)o(d)g Fb(C++)f Fe(compiler)l(.)60 1899 y Ff(2.1.3)50
-b(Microsoft)12 b(W)n(indows)60 1994 y Fe(M)17 b(can)f(be)g(compiled)i
+b(Curr)o(ently)17 b(it)60 2384 y(does)c(not)g(compile)g(with)g(the)g
+(standar)o(d)g Fb(C++)f Fe(compiler)l(.)60 2516 y Ff(2.1.3)50
+b(Microsoft)12 b(W)n(indows)60 2611 y Fe(M)17 b(can)f(be)g(compiled)i
 (under)e(W)m(indows,)j(using)e(wxW)m(indows)f(V)-6 b(ersion)17
-b(2.0)g(and)g(Mi-)60 2054 y(cr)o(osoft)c(V)m(isual)g(C++.)133
-2115 y Fa(FIXME:)g(V)-10 b(ADIM?)60 2265 y Fc(2.2)59
-b(Other)15 b(issues/libraries)60 2361 y Ff(2.2.1)50 b(STL)60
-2456 y Fe(M)10 b(uses)f(the)h(STL,)g(so)g(you)f(need)h(a)f(suf)o
-(\002ciently)h(r)o(ecent)g(compiler)l(,)h(i.e.)16 b Fb(egcs)9
-b Fe(or)g Fb(gcc-2.8)p Fe(.)903 2856 y(2)p eop
+b(2.0)g(and)g(Mi-)60 2671 y(cr)o(osoft)c(V)m(isual)g(C++.)133
+2731 y Fa(FIXME:)g(V)-10 b(ADIM?)903 2856 y Fe(2)p eop
 %%Page: 3 3
-3 2 bop 60 203 a Ff(2.2.2)50 b(C-client)12 b(library)60
-299 y Fe(The)g Fb(c-client)29 b(library)11 b Fe(is)j(r)o(equir)o(ed)e
-(and)h(is)g(available)g(fr)o(om)60 359 y Fb
-(ftp://ftp.cac.washington.edu/ima)o(p/imap.ta)o(r.Z)p
-Fe(.)7 b(Befor)o(e)i(compiling)60 419 y(it)k(with)g(M,)g(you)f(need)h
-(to)g(patch)f(it.)133 479 y(Unpack)17 b(the)h(ar)o(chive)f(in)h(the)g
+3 2 bop 60 203 a Fc(2.2)59 b(Other)15 b(issues/libraries)60
+299 y Ff(2.2.1)50 b(STL)60 394 y Fe(M)10 b(uses)f(the)h(STL,)g(so)g
+(you)f(need)h(a)f(suf)o(\002ciently)h(r)o(ecent)g(compiler)l(,)h(i.e.)
+16 b Fb(egcs)9 b Fe(or)g Fb(gcc-2.8)p Fe(.)60 530 y Ff(2.2.2)50
+b(C-client)12 b(library)60 625 y Fe(The)g Fb(c-client)29
+b(library)11 b Fe(is)j(r)o(equir)o(ed)e(and)h(is)g(available)g(fr)o(om)
+60 685 y Fb(ftp://ftp.cac.washington.edu/ima)o(p/imap.ta)o(r.Z)p
+Fe(.)7 b(Befor)o(e)i(compiling)60 746 y(it)k(with)g(M,)g(you)f(need)h
+(to)g(patch)f(it.)133 806 y(Unpack)17 b(the)h(ar)o(chive)f(in)h(the)g
 (main)g(M)f(dir)o(ectory)-6 b(,)21 b(then)c(change)g(into)i(the)e(IMAP)
-60 539 y(dir)o(ectory)i(and)g(try)f(a)g(\002rst)g Fb(make)p
+60 866 y(dir)o(ectory)i(and)g(try)f(a)g(\002rst)g Fb(make)p
 Fe(,)i(i.e.)35 b(a)18 b Fb(make)30 b(linux)17 b Fe(or)i
-Fb(make)29 b(gso)p Fe(.)k(This)19 b(will)60 600 y(cr)o(eate)11
+Fb(make)29 b(gso)p Fe(.)k(This)19 b(will)60 926 y(cr)o(eate)11
 b(a)h(sour)o(ce)g(dir)o(ectory)g Fb(c-client)f Fe(with)g(lots)i(of)f
 (links)g(to)g(other)g(sour)o(ce)f(\002les)i(in)f(it.)133
-660 y(Then)18 b(install)j(the)e Fb(rfc822.c.patch)e Fe(on)i(c-client's)
-g Fb(rfc822.c)f Fe(\002le)i(fr)o(om)e(the)60 720 y Fb(extra/patches)11
+986 y(Then)18 b(install)j(the)e Fb(rfc822.c.patch)e Fe(on)i(c-client's)
+g Fb(rfc822.c)f Fe(\002le)i(fr)o(om)e(the)60 1047 y Fb(extra/patches)11
 b Fe(subdir)o(ectory)h(of)g(M)g(and)h(run)e(the)h Fb(c-client++)f
-Fe(script)i(fr)o(om)f(the)60 780 y Fb(extra/scripts)i
+Fe(script)i(fr)o(om)f(the)60 1107 y Fb(extra/scripts)i
 Fe(subdir)o(ectory)i(in)g(the)f(c-client)h(sour)o(ce)g(dir)o(ectory)-6
-b(,)18 b(which)d(will)i(r)o(e-)60 840 y(name)e(variables)h(in)g(the)g
+b(,)18 b(which)d(will)i(r)o(e-)60 1167 y(name)e(variables)h(in)g(the)g
 (c-client)g(code)g(to)g(make)f(it)h(C++)h(compliant.)26
-b(If)15 b(ther)o(e)g(is)h(any)60 901 y(pr)o(oblem,)k(it)f(helps)g(to)f
+b(If)15 b(ther)o(e)g(is)h(any)60 1227 y(pr)o(oblem,)k(it)f(helps)g(to)f
 (edit)h(the)g Fb(CCTYPE)e Fe(or)h Fb(CFLAGS)g Fe(\002les.)34
-b(After)17 b(cr)o(eation)i(of)f(the)60 961 y(library)12
+b(After)17 b(cr)o(eation)i(of)f(the)60 1287 y(library)12
 b Fb(c-client.a)p Fe(,)g(all)h(object)f(\002les)h(can)g(be)f(deleted.)
-60 1095 y Ff(2.2.3)50 b(Python)60 1190 y Fb(configure)9
+60 1423 y Ff(2.2.3)50 b(Python)60 1519 y Fb(configure)9
 b Fe(looks)i(for)e(Python)i(in)f Fb(/usr/local/src/Python-1.5)p
-Fe(.)j(If)c(your)h(Py-)60 1251 y(thon)15 b(is)h(installed)h(in)e(a)g
+Fe(.)j(If)c(your)h(Py-)60 1579 y(thon)15 b(is)h(installed)h(in)e(a)g
 (dif)o(fer)o(ent)g(location,)j(change)c(the)h(variable)g
-Fb(PYTHON_PATH)f Fe(at)60 1311 y(the)f(beginning)f(of)g
-Fb(configure)p Fe(.)60 1445 y Ff(2.2.4)50 b(XFaces)60
-1541 y Fe(If)19 b(you)g(have)g(the)g Fb(compface)f Fe(library)h(and)g
+Fb(PYTHON_PATH)f Fe(at)60 1639 y(the)f(beginning)f(of)g
+Fb(configure)p Fe(.)60 1775 y Ff(2.2.4)50 b(XFaces)60
+1870 y Fe(If)19 b(you)g(have)g(the)g Fb(compface)f Fe(library)h(and)g
 (header)g(\002le)h(installed,)j(it)d(will)g(be)f(used)60
-1601 y(to)g(support)f(XFaces.)34 b(T)-5 b(o)18 b(install)j(it,)g
+1931 y(to)g(support)f(XFaces.)34 b(T)-5 b(o)18 b(install)j(it,)g
 (unpack)d(it)h(under)f(the)h(main)f(M)h(dir)o(ectory)g(and)60
-1661 y(apply)13 b(the)f(patch)h Fb(compface.patch)e Fe(fr)o(om)h(the)h
-Fb(extra/patches)e Fe(dir)o(ectory)i(to)g(its)60 1721
+1991 y(apply)13 b(the)f(patch)h Fb(compface.patch)e Fe(fr)o(om)h(the)h
+Fb(extra/patches)e Fe(dir)o(ectory)i(to)g(its)60 2051
 y(sour)o(ces.)31 b(Compile)19 b(it)f(and)g(link)g(its)h(header)e(and)h
-(library)f(to)h(the)f Fb(extra/include)60 1781 y Fe(and)c
-Fb(extra/lib)e Fe(dir)o(ectories.)60 1953 y Fg(3)72 b(Installation)60
-2081 y Fc(3.1)59 b(Con\002guration)14 b(and)g(Compilation)60
-2176 y Fe(Follow)f(these)g(steps:)120 2279 y(1.)25 b(Edit)14
+(library)f(to)h(the)f Fb(extra/include)60 2111 y Fe(and)c
+Fb(extra/lib)e Fe(dir)o(ectories.)60 2284 y Fg(3)72 b(Installation)60
+2413 y Fc(3.1)59 b(Con\002guration)14 b(and)g(Compilation)60
+2508 y Fe(Follow)f(these)g(steps:)120 2622 y(1.)25 b(Edit)14
 b Fb(configure)c Fe(so)j(it)f(will)h(\002nd)g(your)f(installation)i(of)
-e(Python.)k(If)11 b(you)h(do)h(not)182 2339 y(have)f(it,)i(just)e(skip)
-h(this)g(step.)120 2438 y(2.)25 b(Run)13 b Fb(configure)f
+e(Python.)k(If)11 b(you)h(do)h(not)182 2682 y(have)f(it,)i(just)e(skip)
+h(this)g(step.)903 2856 y(3)p eop
+%%Page: 4 4
+4 3 bop 120 203 a Fe(2.)25 b(Run)13 b Fb(configure)f
 Fe(to)h(cr)o(eate)f(the)h Fb(include/config.h)e Fe(and)i
-Fb(makeopts)f Fe(\002le.)182 2498 y(It)g(may)g(be)g(r)o(equir)o(ed)h
-(to)g(edit)g Fb(makeopts)f Fe(by)g(hand.)120 2597 y(3.)25
+Fb(makeopts)f Fe(\002le.)182 264 y(It)g(may)g(be)g(r)o(equir)o(ed)h(to)
+g(edit)g Fb(makeopts)f Fe(by)g(hand.)120 365 y(3.)25
 b(Run)15 b Fb(make)29 b(dep)14 b Fe(and)h Fb(cd)29 b(src)14
 b Fe(and)h Fb(make)f Fe(to)h(compile)g(and)g(link)g(M.)g(Compil-)182
-2657 y(ing)c(some)g(of)g(the)h(sour)o(ce)f(\002les)h(will)g(take)e(an)h
-(enormous)h(amount)f(of)g(memory)-6 b(,)12 b(so)182 2717
+425 y(ing)c(some)g(of)g(the)h(sour)o(ce)f(\002les)h(will)g(take)e(an)h
+(enormous)h(amount)f(of)g(memory)-6 b(,)12 b(so)182 486
 y(make)g(sur)o(e)g(you)g(have)h(enough)f(virtual)h(memory)-6
-b(.)903 2856 y(3)p eop
-%%Page: 4 4
-4 3 bop 60 205 a Fg(4)72 b(Con\002guration)16 b(and)h(T)-8
-b(esting)60 334 y Fc(4.1)59 b(Con\002guration)14 b(settings)60
-429 y Fe(Under)e(Unix)g(all)h(con\002guration)g(settings)g(ar)o(e)e
+b(.)60 659 y Fg(4)72 b(Con\002guration)16 b(and)h(T)-8
+b(esting)60 787 y Fc(4.1)59 b(Con\002guration)14 b(settings)60
+882 y Fe(Under)e(Unix)g(all)h(con\002guration)g(settings)g(ar)o(e)e
 (stor)o(ed)i(in)g Fb(\230/.M/config)e Fe(under)h(W)m(in-)60
-489 y(dows)e(in)h(the)f(r)o(egistry)-6 b(.)15 b(T)-5
+943 y(dows)e(in)h(the)f(r)o(egistry)-6 b(.)15 b(T)-5
 b(o)10 b(get)f(an)h(overview)g(over)g(all)h(possible)f(con\002guration)
-h(options)60 549 y(and)j(their)h(default)g(values,)g(set)g(the)f(value)
-g Fb(RecordDefaults=1)p Fe(.)20 b(Under)13 b(Unix,)i(do)60
-610 y(this)e(by)f(cr)o(eating)h(a)f(new)g Fb(\230/.M/config)f
-Fe(\002le)i(containig)g(the)g(lines)133 670 y Fb([M])133
-730 y(RecordDefaults=1)133 790 y Fe(After)18 b(running)g(M,)h(this)h
+h(options)60 1003 y(and)j(their)h(default)g(values,)g(set)g(the)f
+(value)g Fb(RecordDefaults=1)p Fe(.)20 b(Under)13 b(Unix,)i(do)60
+1063 y(this)e(by)f(cr)o(eating)h(a)f(new)g Fb(\230/.M/config)f
+Fe(\002le)i(containig)g(the)g(lines)133 1123 y Fb([M])133
+1183 y(RecordDefaults=1)133 1244 y Fe(After)18 b(running)g(M,)h(this)h
 (\002le)f(will)h(then)f(contain)g(all)h(default)f(settings.)36
-b(Most)19 b(of)60 850 y(them)11 b(ar)o(e)g(easily)h(understood.)k
+b(Most)19 b(of)60 1304 y(them)11 b(ar)o(e)g(easily)h(understood.)k
 (Otherwise,)c(the)f(\002le)h Fb(include/Mdefaults.h)d
-Fe(con-)60 911 y(tains)k(them)g(all)g(with)g(some)f(short)h(comments.)
-60 1061 y Fc(4.2)59 b(Reading)15 b(mail/news)60 1157
+Fe(con-)60 1364 y(tains)k(them)g(all)g(with)g(some)f(short)h(comments.)
+60 1515 y Fc(4.2)59 b(Reading)15 b(mail/news)60 1610
 y Fe(T)-5 b(o)12 b(r)o(ead)f(news,)h(you)g(need)f(to)i(open)e(a)h
 (folder)l(.)k(The)11 b(default)h(incoming)h(mail)f(folder)g(has)60
-1217 y(the)h(name)g Fb(INBOX)p Fe(.)g(Any)g(other)g(name)g(will)h(be)f
+1670 y(the)h(name)g Fb(INBOX)p Fe(.)g(Any)g(other)g(name)g(will)h(be)f
 (interpr)o(eted)h(as)f(a)g(\002lename)h(r)o(elative)g(to)60
-1277 y(the)f(folder)f(dir)o(ectory)-6 b(.)60 1428 y Fc(4.3)59
-b(W)l(riting)15 b(mail/news)60 1523 y Fe(Befor)o(e)c(being)h(able)f(to)
+1730 y(the)f(folder)f(dir)o(ectory)-6 b(.)60 1881 y Fc(4.3)59
+b(W)l(riting)15 b(mail/news)60 1976 y Fe(Befor)o(e)c(being)h(able)f(to)
 i(send)f(mail,)h(you)f(need)g(to)g(con\002gur)o(e)f(the)h
-Fb(MailHost)f Fe(setting)i(to)60 1583 y(tell)h(it)f(wher)o(e)e(to)i
-(send)g(the)g(mail.)60 1756 y Fg(5)72 b(Further)17 b(Information)133
-1870 y Fd(\017)24 b Fe(Y)-5 b(ou)13 b(can)g(download)g(the)g(latest)g
-(version)g(of)f(M)h(fr)o(om)182 1930 y Fb
-(http://Ballueder.home.ml.org/M/)133 2032 y Fd(\017)24
-b Fe(Y)-5 b(ou)13 b(can)g(also)g(get)f(up-to-date)h(information)g(on)f
-(M)h(fr)o(om)f(the)h(M)f(WWW)g(Page:)182 2092 y Fb
-(http://Ballueder.home.ml.org/M/)133 2194 y Fd(\017)24
-b Fe(wxW)m(indows)12 b(is)i(available)f(fr)o(om)182 2254
-y Fb(http://web.ukonline.co.uk/julia)o(n.smart/)60 2427
-y Fg(6)72 b(F)l(AQ)903 2856 y Fe(4)p eop
+Fb(MailHost)f Fe(setting)i(to)60 2036 y(tell)h(it)f(wher)o(e)e(to)i
+(send)g(the)g(mail.)60 2209 y Fg(5)72 b(Scripting)16
+b(and)i(Python)f(integration)60 2338 y Fc(5.1)59 b(Introduction)60
+2433 y Fe(M)16 b(uses)g(Python)h(as)f(an)f(embedded)i(scripting)g
+(language.)26 b(A)16 b(lar)o(ge)f(number)h(of)f(user)60
+2493 y(de\002nable)20 b(callback)g(functions)g(ar)o(e)g(available.)38
+b(Scripts)20 b(have)g(access)g(most)g(objects)60 2553
+y(living)14 b(in)f(M.)903 2856 y(4)p eop
+%%Page: 5 5
+5 4 bop 60 203 a Fc(5.2)59 b(Initialisation)60 299 y
+Fe(At)13 b(startup,)h(M)f(will)h(load)g(a)f(\002le)g(called)i
+Fb(Minit.py)d Fe(and)h(call)h(the)f Fb(Minit\(\))f Fe(function)60
+359 y(de\002ned)h(in)g(ther)o(e,)g(without)g(any)f(ar)o(guments.)60
+509 y Fc(5.3)59 b(Callback)14 b(Functions)f(\(Hooks\))60
+605 y Fe(Ther)o(e)g(ar)o(e)g(a)h(lar)o(ge)f(number)g(of)h(callbacks)g
+(available)h(which)e(will)i(be)e(called)j(fr)o(om)d(dif-)60
+665 y(fer)o(ent)19 b(places)h(withing)g(M.)g(These)f(ar)o(e)h
+(documented)g(in)h Fb(Mcallbacks.h)p Fe(.)36 b(All)20
+b(of)60 725 y(these)13 b(callbacks)f(ar)o(e)g(called)i(with)f(at)f
+(least)i(two)e(ar)o(guments:)120 839 y(1.)25 b(The)9
+b(name)g(of)g(the)h(hook)f(for)g(which)h(the)f(function)i(got)e
+(called,)j(e.g.)j Fb(FolderOpenHook)120 941 y Fe(2.)25
+b(A)9 b(pointer)h(to)g(the)f(object)h(fr)o(om)f(which)g(it)h(was)f
+(called.)17 b(E.g.)e(for)9 b Fb(FolderOpenHook)p Fe(,)182
+1001 y(this)18 b(would)g(be)f(a)g(pointer)g(to)h(a)f
+Fb(MailFolder)f Fe(object.)30 b(This)18 b(object)f(does)h(not)182
+1061 y(carry)e(a)h(useable)g(type)g(with)g(it)h(and)f(needs)h(to)f(be)g
+(converted)g(in)h(the)f(callback,)182 1122 y(e.g.)26
+b(if)16 b(the)g(ar)o(gument)g(is)g(called)i Fb(arg)d
+Fe(and)i(the)f(object)f(is)i(a)f Fb(MailFolder)p Fe(,)g(the)182
+1182 y(object)h(must)i(either)f(be)f(used)h(as)g Fb
+(MailFolder.MailFolder\(arg\))d Fe(or)j(be)182 1242 y(converted)13
+b(as)f Fb(mf)30 b(=)g(MailFolder.MailFolder\(arg\))p
+Fe(.)120 1344 y(3.)25 b(Some)15 b(callbacks)f(have)h(a)f(thir)o(d)h(ar)
+o(gument.)22 b(This)14 b(is)h(either)g(a)f(single)h(value)g(or)f(a)182
+1404 y(tuple)f(holding)h(several)e(values.)60 1554 y
+Fc(5.4)59 b(Namespaces)60 1650 y Fe(T)-5 b(o)16 b(avoid)i(r)o
+(epeatedly)e(typing)h(in)f(the)h(name)f(of)g(the)g(module)i(\()p
+Fb(MailFolder)c Fe(in)j(this)60 1710 y(case\),)10 b(it)g(can)g(be)f
+(imported)h(into)g(the)g(global)g(namespace)f(with)h(\223)p
+Fb(from\230MailFolder\230import\230*)p Fe(\224.)60 1770
+y(By)15 b(default)g(modules)h(ar)o(e)e(not)h(imported)g(into)h(the)e
+(global)h(namespace)g(and)g(must)g(be)60 1830 y(explicitly)f(named.)60
+1981 y Fc(5.5)59 b(List)14 b(of)i(Callbacks)p 60 2058
+3376 2 v 59 2118 2 61 v 85 2100 a Fe(Callback)d(Name)p
+706 2118 V 309 w(Object)f(T)l(ype)p 1017 2118 V 127 w(Additional)j(Ar)o
+(guments/T)l(ypes)p 1885 2118 V 280 w(Return)d(V)-5 b(alue)p
+2530 2118 V 204 w(Documentaion)p 3434 2118 V 60 2120
+3376 2 v 60 2128 V 59 2188 2 61 v 85 2170 a(FolderOpenHook)p
+706 2188 V 267 w(MailFolder)p 1017 2188 V 460 w(-)p 1885
+2188 V 698 w(void)p 2530 2188 V 299 w(Called)14 b(after)e(a)g(folder)h
+(has)f(been)g(opened.)p 3434 2188 V 60 2190 3376 2 v
+59 2250 2 61 v 85 2232 a(FolderUpdateHook)p 706 2250
+V 225 w(MailFolder)p 1017 2250 V 460 w(-)p 1885 2250
+V 698 w(void)p 2530 2250 V 299 w(Called)i(after)e(a)g(folder)h(has)f
+(been)g(updated.)p 3434 2250 V 60 2252 3376 2 v 59 2312
+2 61 v 85 2294 a(FolderDeleteMessageHook)p 706 2312 V
+58 w(MailFolder)p 1017 2312 V 60 w(\(long\))g(index)h(of)f(message)g
+(to)h(be)e(deleted)p 1885 2312 V 51 w(1)i(if)f(delete)i(is)f(ok,0)f
+(otherwise)p 2530 2312 V 50 w(Called)i(befor)o(e)d(deleting)j(a)e
+(mesage.)p 3434 2312 V 60 2314 3376 2 v 59 2374 2 61
+v 85 2356 a(FolderExpungeHook)p 706 2374 V 192 w(MailFolder)p
+1017 2374 V 460 w(-)p 1885 2374 V 490 w(1)g(to)h(expunge,)f(0)g(to)h
+(abort)p 2530 2374 V 89 w(Called)h(befor)o(e)d(expunging)h(messages.)p
+3434 2374 V 60 2375 3376 2 v 60 2549 a Fg(6)72 b(Further)17
+b(Information)133 2663 y Fd(\017)24 b Fe(Y)-5 b(ou)13
+b(can)g(download)g(the)g(latest)g(version)g(of)f(M)h(fr)o(om)182
+2723 y Fb(http://Ballueder.home.ml.org/M/)903 2856 y
+Fe(5)p eop
+%%Page: 6 6
+6 5 bop 133 203 a Fd(\017)24 b Fe(Y)-5 b(ou)13 b(can)g(also)g(get)f
+(up-to-date)h(information)g(on)f(M)h(fr)o(om)f(the)h(M)f(WWW)g(Page:)
+182 264 y Fb(http://Ballueder.home.ml.org/M/)133 365
+y Fd(\017)24 b Fe(wxW)m(indows)12 b(is)i(available)f(fr)o(om)182
+425 y Fb(http://web.ukonline.co.uk/julia)o(n.smart/)60
+599 y Fg(7)72 b(F)l(AQ)903 2856 y Fe(6)p eop
 %%Trailer
 end
 userdict /end-hook known{end-hook}if
