testing my checkout

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ TODO list for M
 $Id$
 
 *** bugs to fix ***
+testing
 
 - clean up header inclusion: use <> for system/wxWin files and "xxx" for M
   headers in order to get "make depend" right
