Have to do MIME handling for Windows before alpha release.

--- a/TODO
+++ b/TODO
@@ -25,6 +25,9 @@ $Id$
 
 - parent frames should not be NULL
 
+
+- WINDOWS: how to do MIME handling?
+
 - clean up header inclusion: use <> for system/wxWin files and "xxx" for M
   headers in order to get "make depend" right
 
